# shape-tetris

./: .gitignore  Formes_pour_Cercle.txt  Formes_pour_Losange.txt  Formes_pour_Triangle.txt  Interface_debut.txt  README.md  Test.txt  cercle.txt  commun.txt  fonction_affichage_console.py  fonction_lancement_de_partie.py  fonction_relative_a_la_forme.py  fonction_relative_aux_blocs.py  fonction_verification.py  main.py  pyproject.toml  triangle.txt
configs/: boards.json  settings.json
docs/: Rapport_projet_Python.docx  Soutenance_Mathieu_Nathan.odt  architecture.md  gameplay.md  roadmap.md
src/shape_tetris/: main.py  settings.py
src/shape_tetris.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shape_tetris/app/: session.py
src/shape_tetris/game/: block_library.py  block_ops.py  board_factory.py  engine.py  enums.py  models.py  persistence.py  rules.py  scoring.py  state.py
src/shape_tetris/ui/: app.py  hud.py  input_mapper.py  renderer.py  screens.py
src/shape_tetris/utils/: coords.py
tests/: test_block_ops.py  test_board_factory.py  test_engine.py  test_rules.py  test_scoring.py
